RESOLVED FIXED128258
[Mac] Correct copy/paste error in scrolling code
https://bugs.webkit.org/show_bug.cgi?id=128258
Summary [Mac] Correct copy/paste error in scrolling code
Brent Fulgham
Reported 2014-02-05 10:27:36 PST
This patch corrects a very minor copy/paste error that uses "setHeight" when it should be using "setWidth". Since the method only checks both height and width, and doesn't care which is set, this mis-paste had no impact on proper function. This patch is being done to improve code clarity.
Attachments
Patch (1.68 KB, patch)
2014-02-05 10:29 PST, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2014-02-05 10:29:22 PST
WebKit Commit Bot
Comment 2 2014-02-05 13:24:56 PST
Comment on attachment 223246 [details] Patch Clearing flags on attachment: 223246 Committed r163472: <http://trac.webkit.org/changeset/163472>
WebKit Commit Bot
Comment 3 2014-02-05 13:24:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.