[Mac] Correct copy/paste error in scrolling code. https://bugs.webkit.org/show_bug.cgi?id=128258

Reviewed by Anders Carlsson.

* page/scrolling/mac/ScrollingTreeScrollingNodeMac.mm:
(WebCore::ScrollingTreeScrollingNodeMac::pinnedInDirection): Use
'setWidth' when dealing with width metrics.


Canonical link: https://commits.webkit.org/146270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163472 268f45cc-cd09-0410-ab3c-d52691b4dbfc